[package]
name = "faucet-server"
version = "1.1.0"
edition = "2021"
authors = ["Andrés F. Quintero <afquinteromoreano@gmail.com>"]
description = "Welcome to Faucet, your go-to solution for deploying Plumber APIs and Shiny Applications with blazing speed and efficiency. Faucet is a high-performance server built with Rust, offering Round Robin and Round Robin + IP Hash load balancing for seamless scaling and distribution of your R applications. Whether you're a data scientist, developer, or DevOps enthusiast, Faucet streamlines the deployment process, making it easier than ever to manage replicas and balance loads effectively."
license = "MIT"
default-run = "faucet"
readme = "README.md"
homepage = "https://github.com/ixpantia/faucet"
repository = "https://github.com/ixpantia/faucet"
keywords = ["R", "loadbalancer", "server", "plumber", "shiny"]
rust-version = "1.80"

[[bin]]
name = "faucet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
env_logger = "0.11"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
log = "0.4"
num_cpus = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "^0.7", features = ["codec"] }
tokio-tungstenite = "^0.24"
base64 = "0.22"
sha1 = "0.10"
futures-util = "0.3"
tower = "^0.5.1"
ctrlc = "3"
serde = { version = "1.0.204", features = ["derive"] }
fxhash = "0.2.1"
toml = "0.8.19"
nix = "0.29.0"

[dev-dependencies]
rand = "0.8.5"
